--- a/order-test.yml
+++ b/order-test.yml
@@ -19,3 +19,11 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 env:
   test
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: basic  
+
